# nfnb-counter

./: CMakeLists.txt  Counter.cpp  Counter.h  main.cpp
analyzed/: fits.csv
doc/: picture_collection.aux  picture_collection.lof  picture_collection.lot  picture_collection.tex
lib/Timer/: Timer.h
plot/: Plot.py  main.py  nbnf_7_13.py  nbnf_npoms.py
plot/base/: General.py  bcorr.py  diffraction.py  nbnf_corr.py  osci.py
src/: Counter.cpp  Counter.h  main.cpp
